# VeriEQL

./: Dockerfile  README.md  __main__.py  constants.py  context.py  encoder.py  environment.py  pyproject.toml
benchmarks/calcite/: calcite2.jsonlines
benchmarks/literature/: literature-rewrite.jsonlines
formulas/expressions/: __init__.py  operator.py
formulas/expressions/predicates/: __init__.py
formulas/tables/: base_table.py  fake_projection_table.py  filter_table.py
parallel/: cli_within_bound.py  cli_within_timeout.py
visitors/: visitor.py
