[project]
name = "verieql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lark>=1.3.1",
    "matplotlib>=3.10.8",
    "mo-sql-parsing==8.205.22260",
    "mysql-connector-python>=9.6.0",
    "ordered-set>=4.1.0",
    "pandas>=2.3.3",
    "prettytable>=3.17.0",
    "pyyaml>=6.0.3",
    "sphinx>=8.1.3",
    "sphinx-rtd-theme>=3.1.0",
    "tqdm>=4.67.3",
    "ujson>=5.11.0",
    "z3-solver>=4.16.0.0",
]
